force-app/main/default/objects/Case/fields/Primary_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Income_Frequency__c</fullName>
    <label>Primary Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>