force-app/main/default/objects/Case/fields/Purchase_Intent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Intent__c</fullName>
    <label>Purchase Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>Within a month</fullName>
            </value>
            <value>
                <fullName>No hurry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>