force-app/main/default/objects/Case/fields/Quicklinks_Description__c.field-meta.xml
<CustomField>
    <fullName>Quicklinks_Description__c</fullName>
    <label>Quicklinks Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>