force-app/main/default/objects/Case/fields/Quote_UUID__c.field-meta.xml
<CustomField>
    <fullName>Quote_UUID__c</fullName>
    <externalId>true</externalId>
    <label>Quote UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>