force-app/main/default/objects/Case/fields/Quoted_Date__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Date__c</fullName>
    <description>Changing Field Type from Date To Date/Time</description>
    <label>Quoted Date</label>
    <type>DateTime</type>
</CustomField>