force-app/main/default/objects/Case/fields/Ready_for_Rego__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Rego__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Rego</label>
    <type>Checkbox</type>
</CustomField>