force-app/main/default/objects/Case/fields/Ready_to_Lodge_Update__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Lodge_Update__c</fullName>
    <inlineHelpText>When Assessment Quality is updated to Ready to Lodge</inlineHelpText>
    <label>Ready to Lodge Date</label>
    <type>DateTime</type>
</CustomField>