force-app/main/default/objects/Case/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <description>Changing Field Type Date to Date/Time</description>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>