force-app/main/default/objects/Case/fields/Referral_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Referral_Outcome__c</fullName>
    <label>Referral Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>