force-app/main/default/objects/Case/fields/Referred_date__c.field-meta.xml
<CustomField>
    <fullName>Referred_date__c</fullName>
    <label>Referred date</label>
    <type>DateTime</type>
</CustomField>