force-app/main/default/objects/Case/fields/Registeration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registeration_Date__c</fullName>
    <label>Registeration Date</label>
    <type>Date</type>
</CustomField>