force-app/main/default/objects/Case/fields/Rego__c.field-meta.xml
<CustomField>
    <fullName>Rego__c</fullName>
    <label>Rego</label>
    <length>20</length>
    <type>Text</type>
</CustomField>