force-app/main/default/objects/Case/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widow</fullName>
            </value>
            <value>
                <fullName>Defacto</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>