force-app/main/default/objects/Case/fields/Rent_Mortgage_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_Mortgage_per_Month__c</fullName>
    <label>Rent/ Mortgage per Month</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>