force-app/main/default/objects/Case/fields/Set_follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Set_follow_up_date__c</fullName>
    <label>Set Follow Up Date</label>
    <type>DateTime</type>
</CustomField>