force-app/main/default/objects/Case/fields/Settlement_Agent__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>