force-app/main/default/objects/Case/fields/Settlement_Agent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Agent_First_Name__c</fullName>
    <formula>Settlement_Agent__r.FirstName</formula>
    <label>Settlement Agent First Name</label>
    <type>Text</type>
</CustomField>