force-app/main/default/objects/Case/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <label>Settlement Date</label>
    <type>DateTime</type>
</CustomField>