force-app/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>If( SLA_Acct__r.Name ==&apos;Dealer&apos;,&apos;Dealer&apos;,&apos;carsales&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>