force-app/main/default/objects/Case/fields/SLA_Account__c.field-meta.xml
<CustomField>
    <fullName>SLA_Account__c</fullName>
    <label>SLA Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>