force-app/main/default/objects/Case/fields/SLA_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SLA_Account_Name__c</fullName>
    <formula>SLA_Acct__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Account Name</label>
    <type>Text</type>
</CustomField>