force-app/main/default/objects/Case/fields/SLA_Acct__c.field-meta.xml
<CustomField>
    <fullName>SLA_Acct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA Acct</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (SLA Acct)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>