force-app/main/default/objects/Case/fields/SMS1_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>SMS1_Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS1 Under Review</label>
    <type>Checkbox</type>
</CustomField>