force-app/main/default/objects/Case/fields/SMS2_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>SMS2_Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS2 Under Review</label>
    <type>Checkbox</type>
</CustomField>