force-app/main/default/objects/Case/fields/SMS3_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>SMS3_Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS3 Under Review</label>
    <type>Checkbox</type>
</CustomField>