force-app/main/default/objects/Case/fields/SMS_2_Awaiting_Documents__c.field-meta.xml
<CustomField>
    <fullName>SMS_2_Awaiting_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS 2 Awaiting Documents</label>
    <type>Checkbox</type>
</CustomField>