force-app/main/default/objects/Case/fields/SMS_3_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>SMS_3_Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS 3 Under Review</label>
    <type>Checkbox</type>
</CustomField>