force-app/main/default/objects/Case/fields/Split_Test__c.field-meta.xml
<CustomField>
    <fullName>Split_Test__c</fullName>
    <formula>Contact.Split_Testing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Testing</label>
    <type>Checkbox</type>
</CustomField>