force-app/main/default/objects/Case/fields/Split_Testing__c.field-meta.xml
<CustomField>
    <fullName>Split_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Testing</label>
    <type>Checkbox</type>
</CustomField>