force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call 1 Made</fullName>
            </value>
            <value>
                <fullName>Call 2 Made</fullName>
            </value>
            <value>
                <fullName>Follow up Date</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Correspondence Received</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Response</fullName>
            </value>
            <value>
                <fullName>Requires Driva Action</fullName>
            </value>
            <value>
                <fullName>Follow up Date Set</fullName>
            </value>
            <value>
                <fullName>Declinature Sent</fullName>
            </value>
            <value>
                <fullName>Settlement in Progress</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Ready for Lodgement</fullName>
            </value>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>Withdraw Request</fullName>
            </value>
            <value>
                <fullName>Document Received</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>