force-app/main/default/objects/Case/fields/Successful_Vehicle_Referral__c.field-meta.xml
<CustomField>
    <fullName>Successful_Vehicle_Referral__c</fullName>
    <label>Successful Vehicle Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARS24</fullName>
            </value>
            <value>
                <fullName>CarConnect</fullName>
            </value>
            <value>
                <fullName>Carbuyers</fullName>
            </value>
            <value>
                <fullName>Sydney City MG</fullName>
            </value>
            <value>
                <fullName>Verified Cars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>