force-app/main/default/objects/Case/fields/System_Case_Under_Review_Email_3_Sent__c.field-meta.xml
<CustomField>
    <fullName>System_Case_Under_Review_Email_3_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Case Under Review Email 3 Sent</label>
    <type>Checkbox</type>
</CustomField>