force-app/main/default/objects/Case/fields/System_Chase_Email_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>System_Chase_Email_2_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Chase Email 2 Sent</label>
    <type>Checkbox</type>
</CustomField>