force-app/main/default/objects/Case/fields/Test_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Test_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test checkbox</label>
    <type>Checkbox</type>
</CustomField>