force-app/main/default/objects/Case/fields/Testcheckbox__c.field-meta.xml
<CustomField>
    <fullName>Testcheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testcheckbox</label>
    <type>Checkbox</type>
</CustomField>