force-app/main/default/objects/Case/fields/testing_schedule_flow__c.field-meta.xml
<CustomField>
    <fullName>testing_schedule_flow__c</fullName>
    <label>testing schedule flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>