force-app/main/default/objects/Case/fields/Time_in_Current_Employment_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Current_Employment_Months__c</fullName>
    <label>Time in Current Employment Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>