force-app/main/default/objects/Case/fields/Total_Expense_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Per_Month__c</fullName>
    <formula>Entertainment_Per_Month__c + Food_Per_Month__c + Utilities_Per_Month__c + Others_Per_Month__c + Health_Education_Per_Month__c + Transport_Per_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expense Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>