force-app/main/default/objects/Case/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>