force-app/main/default/objects/Case/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <label>Total Income</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>