force-app/main/default/objects/Case/fields/Track_status_history__c.field-meta.xml
<CustomField>
    <fullName>Track_status_history__c</fullName>
    <label>Track status history</label>
    <type>TextArea</type>
</CustomField>