force-app/main/default/objects/Case/fields/Trade_in_Finance_owing__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Finance_owing__c</fullName>
    <description>The amount of finance-owed on the vehicle being traded-in.</description>
    <label>Trade-in Finance-owing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>