force-app/main/default/objects/Case/fields/Trade_in_Value__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Value__c</fullName>
    <description>The trade-in vehicle value</description>
    <label>Trade-in Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>