force-app/main/default/objects/Case/fields/Transport_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Transport_Per_Month__c</fullName>
    <label>Transport Per Month</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>