force-app/main/default/objects/Case/fields/Trigger_Sub_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Sub_Status_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Sub-Status Update</label>
    <type>Checkbox</type>
</CustomField>