force-app/main/default/objects/Case/fields/Trustpilot_Review__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_Review__c</fullName>
    <label>Trustpilot Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>