force-app/main/default/objects/Case/fields/Under_Review_CARS24_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Under_Review_CARS24_Email_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Review - CARS24 Email 1</label>
    <type>Checkbox</type>
</CustomField>