force-app/main/default/objects/Case/fields/Under_Review_CARS24_SMS2__c.field-meta.xml
<CustomField>
    <fullName>Under_Review_CARS24_SMS2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Review - CARS24 SMS2</label>
    <type>Checkbox</type>
</CustomField>