force-app/main/default/objects/Case/fields/Under_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Under_Review_Date__c</fullName>
    <description>Changing Field Type from Date to Date/Time</description>
    <label>Under Review Date</label>
    <type>DateTime</type>
</CustomField>