force-app/main/default/objects/Case/fields/Utilities_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Per_Month__c</fullName>
    <label>Utilities Per Month</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>