force-app/main/default/objects/Case/fields/Veda_Score__c.field-meta.xml
<CustomField>
    <fullName>Veda_Score__c</fullName>
    <label>Veda Score</label>
    <length>225</length>
    <type>Text</type>
</CustomField>