force-app/main/default/objects/Case/fields/Vehicle_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vehicle enquiry flag</description>
    <label>Vehicle Enquiry</label>
    <type>Checkbox</type>
</CustomField>