force-app/main/default/objects/Case/fields/Vehicle_make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_make__c</fullName>
    <label>Vehicle Make</label>
    <type>TextArea</type>
</CustomField>