force-app/main/default/objects/Case/fields/Vehicle_model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_model__c</fullName>
    <label>Vehicle Model</label>
    <type>TextArea</type>
</CustomField>