force-app/main/default/objects/Case/fields/Vehicle_Price__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Price__c</fullName>
    <label>Vehicle Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>