force-app/main/default/objects/Case/fields/Vehicle_year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_year__c</fullName>
    <label>Vehicle Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>