force-app/main/default/objects/Case/fields/Verification_Agent__c.field-meta.xml
<CustomField>
    <fullName>Verification_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For cases in Under review,  S&amp;S agent to do verification (check documents, verify case details match documents) before giving it to a credit agent</description>
    <label>Verification Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>