force-app/main/default/objects/Case/fields/Verification_Agent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Verification_Agent_First_Name__c</fullName>
    <formula>Verification_Agent__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification Agent First Name</label>
    <type>Text</type>
</CustomField>