force-app/main/default/objects/Case/fields/Verified_Update__c.field-meta.xml
<CustomField>
    <fullName>Verified_Update__c</fullName>
    <inlineHelpText>When Assessment Quality is updated to Verified</inlineHelpText>
    <label>Verified Date</label>
    <type>DateTime</type>
</CustomField>