force-app/main/default/objects/Case/fields/Verifier_Income_Link__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Income_Link__c</fullName>
    <label>Verifier Income Link</label>
    <type>Url</type>
</CustomField>