force-app/main/default/objects/Case/fields/Verifier_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Net_Income__c</fullName>
    <label>Annual Verifier Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>