force-app/main/default/objects/Case/fields/Warranty_Financed__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Financed__c</fullName>
    <label>Warranty Financed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>