force-app/main/default/objects/Case/fields/Withdraw_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_Decline_Reason__c</fullName>
    <label>Withdraw / Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BS - Other Bank Statement Conduct</fullName>
            </value>
            <value>
                <fullName>BS - Pay Day Activity</fullName>
            </value>
            <value>
                <fullName>CF - Financial Defaults</fullName>
            </value>
            <value>
                <fullName>CF - Late Payments</fullName>
            </value>
            <value>
                <fullName>CF - Other Credit File Conduct</fullName>
            </value>
            <value>
                <fullName>CF - Too Many Enquiries</fullName>
            </value>
            <value>
                <fullName>Found Other Finance Option</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Insufficient Employment History</fullName>
            </value>
            <value>
                <fullName>No Longer Buying a Car</fullName>
            </value>
            <value>
                <fullName>No Longer Using Finance</fullName>
            </value>
            <value>
                <fullName>No Reply / Cold Lead</fullName>
            </value>
            <value>
                <fullName>No Servicing Capacity</fullName>
            </value>
            <value>
                <fullName>Other Knockout</fullName>
            </value>
            <value>
                <fullName>Residency</fullName>
            </value>
            <value>
                <fullName>Lockdown Impact</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Insufficient ABN</fullName>
            </value>
            <value>
                <fullName>Counter-offer</fullName>
            </value>
            <value>
                <fullName>Could not find vehicle</fullName>
            </value>
            <value>
                <fullName>BS - Dishonours</fullName>
            </value>
            <value>
                <fullName>BS - Days in Negative</fullName>
            </value>
            <value>
                <fullName>BS - Gambling</fullName>
            </value>
            <value>
                <fullName>BS - ATM Withdrawals</fullName>
            </value>
            <value>
                <fullName>Recent Drawdown</fullName>
            </value>
            <value>
                <fullName>Delayed Delivery</fullName>
            </value>
            <value>
                <fullName>Loan Purpose</fullName>
            </value>
            <value>
                <fullName>ATM Withdrawals/Gambling</fullName>
                <isActive>false</isActive>
                <label>ATM Withdrawals/Gambling</label>
            </value>
            <value>
                <fullName>BS - Dishonours / Days in Negative</fullName>
                <isActive>false</isActive>
                <label>BS - Dishonours / Days in Negative</label>
            </value>
            <value>
                <fullName>BS - Gambling / ATM Withdrawals</fullName>
                <isActive>false</isActive>
                <label>BS - Gambling / ATM Withdrawals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>