force-app/main/default/objects/Case/fields/Withdrawn_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawn_Date__c</fullName>
    <label>Withdrawn Date</label>
    <type>DateTime</type>
</CustomField>