force-app/main/default/objects/Case/fields/Zendesk_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Created_Date__c</fullName>
    <label>Zendesk Created Date</label>
    <type>DateTime</type>
</CustomField>