force-app/main/default/objects/Case/fields/Zendesk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Ticket_ID__c</fullName>
    <label>Zendesk Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>