force-app/main/default/objects/Case/recordTypes/Applications.recordType-meta.xml
<RecordType>
    <fullName>Applications</fullName>
    <active>true</active>
    <businessProcess>Applications</businessProcess>
    <label>Applications</label>
</RecordType>