force-app/main/default/objects/Case/recordTypes/Sales_Service_Action.recordType-meta.xml
<RecordType>
    <fullName>Sales_Service_Action</fullName>
    <active>true</active>
    <businessProcess>Voicemail</businessProcess>
    <label>Sales &amp; Service Action</label>
</RecordType>