force-app/main/default/objects/Case/recordTypes/Voicemail_Customer.recordType-meta.xml
<RecordType>
    <fullName>Voicemail_Customer</fullName>
    <active>true</active>
    <businessProcess>Voicemail</businessProcess>
    <label>Voicemail - Customer</label>
</RecordType>