force-app/main/default/objects/Case/recordTypes/Voicemail_Partner.recordType-meta.xml
<RecordType>
    <fullName>Voicemail_Partner</fullName>
    <active>true</active>
    <businessProcess>Voicemail</businessProcess>
    <label>Voicemail - Partner</label>
</RecordType>