force-app/main/default/objects/Case/validationRules/Disable_Editing_of_Counter_offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Editing_of_Counter_offer</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Profile.Name == &apos;System Administrator&apos;  || $Profile.Name == &apos;Manager&apos;, false, IF( Counter_offer__c != true &amp;&amp;  ISCHANGED(Counter_offer__c) , true, false))</errorConditionFormula>
    <errorDisplayField>Counter_offer__c</errorDisplayField>
    <errorMessage>Counter Offer cannot be edited</errorMessage>
</ValidationRule>